--- a/index.html
+++ b/index.html
@@ -4,52 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
     <title>YOSAKOI YOASOBI ゲーム</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
-        #gameContainer {
-            display: none;
-            position: relative;
-            width: 100%;
-            height: calc(100vh - 100px); /* ボタンエリアを除いた高さ */
-            text-align: center;
-        }
-        #displayText {
-            position: absolute;
-            font-size: 2em;
-        }
-        #buttonContainer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            height: 100px;
-            background-color: #f1f1f1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            display: none; /* 初期状態で非表示 */
-        }
-        #result {
-            display: none;
-            text-align: center;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 1em;
-        }
-        #counter {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button id="startButton">スタート</button>
@@ -67,99 +22,6 @@
         <p id="incorrect"></p>
         <button id="restartButton">リスタート</button>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const startButton = document.getElementById('startButton');
-            const gameContainer = document.getElementById('gameContainer');
-            const displayText = document.getElementById('displayText');
-            const yoasobiButton = document.getElementById('yoasobiButton');
-            const yosakoiButton = document.getElementById('yosakoiButton');
-            const result = document.getElementById('result');
-            const timeDisplay = document.getElementById('time');
-            const correctDisplay = document.getElementById('correct');
-            const incorrectDisplay = document.getElementById('incorrect');
-            const restartButton = document.getElementById('restartButton');
-            const counter = document.getElementById('counter');
-            const buttonContainer = document.getElementById('buttonContainer');
-
-            let startTime, endTime;
-            let correctCount = 0;
-            let incorrectCount = 0;
-            let currentIndex = 0;
-            let texts = [];
-
-            startButton.addEventListener('click', startGame);
-            yoasobiButton.addEventListener('click', () => handleAnswer('YOASOBI'));
-            yosakoiButton.addEventListener('click', () => handleAnswer('YOSAKOI'));
-            restartButton.addEventListener('click', resetGame);
-
-            function startGame() {
-                startButton.style.display = 'none';
-                gameContainer.style.display = 'block';
-                buttonContainer.style.display = 'flex';
-                result.style.display = 'none';
-                startTime = new Date();
-                correctCount = 0;
-                incorrectCount = 0;
-                currentIndex = 0;
-                texts = Array.from({ length: 20 }, () => Math.random() < 0.5 ? 'YOASOBI' : 'YOSAKOI');
-                displayNextText();
-            }
-
-            function displayNextText() {
-                if (currentIndex < texts.length) {
-                    displayText.textContent = texts[currentIndex];
-                    adjustTextSizeAndPosition();
-                    counter.textContent = `残り: ${20 - currentIndex} 回`;
-                } else {
-                    endGame();
-                }
-            }
-
-            function adjustTextSizeAndPosition() {
-                // ランダムなフォントサイズを設定
-                const randomFontSize = Math.floor(Math.random() * (24 - 10 + 1)) + 10;
-                displayText.style.fontSize = `${randomFontSize}px`;
-
-                // テキストの位置をランダムに設定し、ボタンエリアにかからないように調整
-                const textWidth = displayText.clientWidth;
-                const textHeight = displayText.clientHeight;
-                const maxWidth = gameContainer.clientWidth - textWidth;
-                const maxHeight = gameContainer.clientHeight - textHeight;
-                const randomX = Math.random() * maxWidth;
-                const randomY = Math.random() * maxHeight;
-
-                displayText.style.left = `${Math.max(0, Math.min(randomX, maxWidth))}px`;
-                displayText.style.top = `${Math.max(0, Math.min(randomY, maxHeight))}px`;
-            }
-
-            function handleAnswer(answer) {
-                if (texts[currentIndex] === answer) {
-                    correctCount++;
-                } else {
-                    incorrectCount++;
-                }
-                currentIndex++;
-                displayNextText();
-            }
-
-            function endGame() {
-                endTime = new Date();
-                const timeTaken = (endTime - startTime) / 1000;
-                timeDisplay.textContent = `タイム: ${timeTaken}秒`;
-                correctDisplay.textContent = `正解数: ${correctCount}`;
-                incorrectDisplay.textContent = `不正解数: ${incorrectCount}`;
-                gameContainer.style.display = 'none';
-                buttonContainer.style.display = 'none';
-                result.style.display = 'block';
-            }
-
-            function resetGame() {
-                result.style.display = 'none';
-                startButton.style.display = 'block';
-                buttonContainer.style.display = 'none';
-            }
-        });
-    </script>
+    <script src="script.js" defer></script>
 </body>
 </html>
